--- a/public/Components/PostComponent/PostComponent.scss
+++ b/public/Components/PostComponent/PostComponent.scss
@@ -211,7 +211,7 @@
 
     &__nav {
         position: absolute;
-        background: var(--background-white);
+        background: var(--button-white);
         align-self: center;
         width: 28px;
         height: 28px;
