--- a/public/Components/RadioMenuComponent/RadioMenuComponent.scss
+++ b/public/Components/RadioMenuComponent/RadioMenuComponent.scss
@@ -3,7 +3,7 @@
     border-radius: 12px;
     padding: 8px;
     width: 100%;
-    background: var(--text-white);
+    background: var(--background-white);
     gap: 2px;
     display: flex;
     flex-direction: column;
