--- a/public/Views/LoginView/LoginView.scss
+++ b/public/Views/LoginView/LoginView.scss
@@ -16,6 +16,7 @@
     line-height: 130%;
     white-space: pre-line;
     justify-content: space-between;
+    color: var(--text-primary);
 }
 
 .auth__info-header {
