--- a/public/Components/MessengerComponent/ChatWindowComponent.scss
+++ b/public/Components/MessengerComponent/ChatWindowComponent.scss
@@ -82,7 +82,7 @@
     bottom: 0;
     position: absolute;
     padding: 0 16px 16px 16px;
-    background: #ffffffcc;
+    background: var(--background-white);
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
     -moz-backdrop-filter: blur(12px);
