--- a/public/Components/HeaderComponent/HeaderComponent.scss
+++ b/public/Components/HeaderComponent/HeaderComponent.scss
@@ -14,6 +14,12 @@
     justify-content: center;
 }
 
+@media screen and (max-width: 480px) {
+    .header {
+        display: none;
+    }
+}
+
 .header__inner {
     display: flex;
     width: 100%;
