--- a/public/Components/MenuComponent/MenuComponent.scss
+++ b/public/Components/MenuComponent/MenuComponent.scss
@@ -86,6 +86,12 @@
         flex-direction: column;
         gap: 4px;
         height: 100%;
+        color: var(--text-secondary);
+        font-weight: var(--font-weight-regular);
+    }
+
+    .menu__item_active {
+        color: var(--text-accent);
     }
 
     .menu__icon {
