--- a/public/Components/MenuComponent/MenuComponent.scss
+++ b/public/Components/MenuComponent/MenuComponent.scss
@@ -87,7 +87,7 @@
         gap: 4px;
         height: 100%;
         color: var(--text-secondary);
-        font-weight: var(--font-weight-regular);
+        font-weight: var(--font-weight-bold);
     }
 
     .menu__item_active {
