--- a/public/Components/PostComponent/PostComponent.scss
+++ b/public/Components/PostComponent/PostComponent.scss
@@ -288,6 +288,11 @@
         width: 100%;
         height: auto;
     }
+
+    .post__nav {
+        width: 32px;
+        height: 32px;
+    }
 }
 
 .hidden {
