--- a/public/Components/LoginFormComponent/LoginFormComponent.scss
+++ b/public/Components/LoginFormComponent/LoginFormComponent.scss
@@ -30,6 +30,7 @@ fieldset {
     background: var(--background-white);
     border-radius: 12px;
     padding: 24px 28px;
+    max-width: 360px;
     width: 360px;
     box-sizing: border-box;
 }
