--- a/public/Components/HeaderComponent/HeaderComponent.scss
+++ b/public/Components/HeaderComponent/HeaderComponent.scss
@@ -122,6 +122,7 @@ a {
 @media screen and (max-width: 480px) {
     .header {
         width: 100%;
+        height: 48px;
         padding: 0 15px;
         border: none;
     }
