--- a/public/Components/HeaderComponent/HeaderComponent.scss
+++ b/public/Components/HeaderComponent/HeaderComponent.scss
@@ -121,10 +121,15 @@ a {
 
 @media screen and (max-width: 480px) {
     .header {
-        width: 100%;
-        height: 48px;
-        padding: 0 15px;
-        border: none;
+        // width: 100%;
+        // height: 48px;
+        // padding: 0 15px;
+        // border: none;
+        display: none;
+    }
+
+    .header__inner {
+        height: 100%;
     }
 
     .header__left {
