--- a/public/Views/ProfileView/ProfileView.scss
+++ b/public/Views/ProfileView/ProfileView.scss
@@ -180,9 +180,13 @@
     line-clamp: 2;
 }
 
+.profile__menu-btn {
+    display: none;
+}
+
 @media screen and (max-width: 480px) {
     .container_profile {
-        padding-top: 33px;
+        margin-top: -15px;
         gap: 24px;
     }
 
@@ -231,5 +235,52 @@
 
     .profile__info {
         padding: 0;
+    }
+
+    .profile__menu-btn {
+        width: 32px;
+        height: 32px;
+        background: var(--background-black-transparent);
+        border-radius: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    .js-profile-menu {
+        position: absolute;
+        top: 15px;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        z-index: 1;
+    }
+
+    .js-profile-menu .profile-menu {
+        top: 40px;
+        border-radius: 12px;
+        padding: 8px;
+        width: fit-content;
+        white-space: nowrap;
+    }
+
+    .profile__menu-icon {
+        color: var(--icon-white);
+        width: 16px;
+        height: 16px;
+        display: flex;
+    }
+
+    .profile-menu__info {
+        display: none;
+    }
+
+    .js-profile-menu:hover .profile-menu {
+        opacity: 1;
+        transform: scale(1) translateY(0);
+        z-index: 0;
+        pointer-events: auto;
     }
 }
