--- a/public/constants.scss
+++ b/public/constants.scss
@@ -3,6 +3,8 @@
     --icon-primary-hover: #b8bec6;
     --icon-primary-disabled: #dce1e5;
     --icon-accent: #4369fc;
+    --icon-yellow: #ffd600;
+    --icon-yellow-disabled: #fff3b3;
     --icon-white: #fff;
     --icon-green: #24b324;
     --icon-red: #ff3b2f;
