--- a/public/imports.scss
+++ b/public/imports.scss
@@ -33,3 +33,4 @@
 @use './Views/NotFoundView/NotFoundView';
 @use './Views/LoginView/LoginView';
 @use './Views/CSATView/CSATView';
+@use './Views/StatsView/StatsView';
