--- a/public/Views/StatsView/StatsView.scss
+++ b/public/Views/StatsView/StatsView.scss
@@ -23,3 +23,9 @@
     display: flex;
     flex-direction: row;
 }
+
+.feedback__text {
+    font-size: 14px;
+    color: var(--text-secondary);
+    margin-bottom: 4px;
+}
