--- a/public/Components/UI/InputComponent/InputComponent.scss
+++ b/public/Components/UI/InputComponent/InputComponent.scss
@@ -100,3 +100,7 @@
     background: url(./../static/img/search-icon.svg) 0 0 no-repeat;
     background-size: contain;
 }
+
+.input_wide {
+    width: 100%;
+}
