--- a/public/Components/FeedComponent/FeedComponent.scss
+++ b/public/Components/FeedComponent/FeedComponent.scss
@@ -2,7 +2,7 @@
     background: var(--background-white);
     border: 1px solid var(--stroke-primary);
     border-radius: 12px;
-    width: 553px;
+    width: 100%;
     height: 40px;
     font-weight: var(--font-weight-bold);
     font-size: var(--font-size-l);
