--- a/public/Components/PostComponent/PostComponent.scss
+++ b/public/Components/PostComponent/PostComponent.scss
@@ -3,8 +3,10 @@
     flex-direction: column;
     align-items: flex-start;
     max-width: 553px;
-    width: 553px;
+    // width: 553px;
     gap: 16px;
+
+    width: 100%;
 
     &__content {
         display: flex;
@@ -132,24 +134,31 @@
     &__pics {
         display: flex;
         overflow: hidden;
-        width: 553px;
+        // width: 553px;
         position: relative;
         border-radius: 8px;
         margin-top: -4px;
+
+        width: 100%;
+        aspect-ratio: 4 / 5;
     }
 
     &__slide {
-        width: 553px;
+        // width: 553px;
         aspect-ratio: 4 / 5;
         display: flex;
+
+        height: 100%;
     }
 
     &__pic {
         border: 1px solid var(--stroke-primary);
         border-radius: 8px;
-        width: 553px;
+        // width: 553px;
         height: 100%;
         object-fit: cover;
+
+        width: 100%;
     }
 
     &__actions {
@@ -185,27 +194,23 @@
         background-position: 0 0;
     }
 
-    &__like {
-        background-image: url(./static/img/like-icon.svg);
+    &__action-icon {
+        width: 20px;
+        height: 20px;
+        color: var(--icon-primary);
+        order: 1;
     }
 
-    &__comment {
-        background-image: url(./static/img/comment-icon.svg);
-    }
-
-    &__repost {
-        background-image: url(./static/img/repost-icon.svg);
-    }
-
-    &__bookmark {
-        background-image: url(./static/img/bookmark-icon.svg);
+    &__action-icon_liked {
+        color: var(--icon-red);
     }
 
     &__counter {
         font-weight: var(--font-weight-bold);
-        font-size: 16px;
-        line-height: 100%;
+        font-size: var(--font-size-l);
+        line-height: var(--line-height-m);
         color: var(--text-secondary);
+        order: 2;
     }
 
     &__nav {
