--- a/public/Components/UI/ModalWindowComponent/ModalWindowComponent.scss
+++ b/public/Components/UI/ModalWindowComponent/ModalWindowComponent.scss
@@ -63,6 +63,13 @@
     border: none;
 }
 
+.modal__close_absolute {
+    position: absolute;
+    right: 16px;
+    top: 16px;
+    z-index: 2;
+}
+
 .modal__close:hover {
     background-color: var(--background-light-gray);
 }
@@ -261,6 +268,11 @@
     width: 24px;
     height: 24px;
     color: var(--text-primary);
+}
+
+.modal_inherit {
+    padding: 0;
+    width: auto;
 }
 
 @media screen and (max-width: 480px) {
