--- a/public/imports.scss
+++ b/public/imports.scss
@@ -27,6 +27,7 @@
 @use './Components/CSATComponent/CSATComponent';
 @use './Components/FriendComponent/FriendComponent';
 @use './Components/EmptyStateComponent/EmptyStateComponent';
+@use './Components/SearchComponent/SearchComponent';
 
 @use './Views/FeedView/FeedView';
 @use './Views/ProfileView/ProfileView';
