--- a/public/Components/UI/PopUpComponent/PopUpComponent.scss
+++ b/public/Components/UI/PopUpComponent/PopUpComponent.scss
@@ -21,6 +21,7 @@
 
     left: 50%;
     transform: scale(0.98) translateY(8px);
+    translate: calc(-50% + 110px);
     top: 80px;
 }
 
@@ -63,4 +64,10 @@
 .popup_hidden {
     opacity: 0;
     transform: scale(0.98) translateY(8px);
+}
+
+@media screen and (max-width: 480px) {
+    .popup {
+        translate: -50%;
+    }
 }
