--- a/public/Views/ProfileView/ProfileView.scss
+++ b/public/Views/ProfileView/ProfileView.scss
@@ -299,7 +299,7 @@
     .profile__friend {
         width: auto;
         margin-left: -8px;
-        border: 2px white solid;
+        border: 2px var(--background-white) solid;
         border-radius: 100px;
     }
 
