--- a/public/Components/HeaderComponent/HeaderComponent.scss
+++ b/public/Components/HeaderComponent/HeaderComponent.scss
@@ -138,6 +138,12 @@ a {
     padding: 0 8px;
 }
 
+.header__results-items {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
 @media screen and (max-width: 480px) {
     .header {
         // width: 100%;
