--- a/public/Components/HeaderComponent/HeaderComponent.scss
+++ b/public/Components/HeaderComponent/HeaderComponent.scss
@@ -62,6 +62,7 @@
     padding: 16px 8px 8px 8px;
     order: 2;
     gap: 4px;
+    max-width: 260px;
 }
 
 .header__result {
@@ -72,12 +73,22 @@
     border-radius: 8px;
     text-decoration: none;
     color: var(--text-primary);
-    line-height: var(--line-height-medium);
+    line-height: var(--line-height-m);
     display: flex;
     padding: 8px;
     gap: 8px;
     flex-direction: row;
     align-items: center;
+}
+
+.header__result-name {
+    color: var(--text-primary);
+    word-break: break-word;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
 }
 
 .header__result:hover {
