--- a/public/Components/MessengerComponent/MessengerComponent.scss
+++ b/public/Components/MessengerComponent/MessengerComponent.scss
@@ -8,3 +8,9 @@
     flex-direction: row;
     align-items: center;
 }
+
+@media screen and (max-width: 480px) {
+    .messenger {
+        border: none;
+    }
+}
