--- a/public/Components/MainLayoutComponent/MainLayoutComponent.scss
+++ b/public/Components/MainLayoutComponent/MainLayoutComponent.scss
@@ -107,6 +107,14 @@
         width: 100%;
     }
 
+    .container_messenger {
+        flex-direction: column;
+        width: 100vw;
+        height: calc(100vh - 80px);
+        top: 0;
+        position: absolute;
+    }
+
     .container__row {
         flex-direction: column;
     }
