--- a/public/Components/MessengerComponent/ChatComponent.scss
+++ b/public/Components/MessengerComponent/ChatComponent.scss
@@ -125,3 +125,13 @@
     align-items: center;
     gap: 8px;
 }
+
+@media screen and (max-width: 480px) {
+    .chat__msg {
+        padding: 8px 16px;
+    }
+
+    .chat__msg_nameless {
+        padding-left: 52px;
+    }
+}
