--- a/public/Components/MenuComponent/MenuComponent.scss
+++ b/public/Components/MenuComponent/MenuComponent.scss
@@ -105,7 +105,7 @@
         border-right: none;
         border-top: 1px solid var(--stroke-primary);
         flex-direction: row;
-        padding: 0px 0 28px 0;
+        padding: 0px 0 36px 0;
         gap: 0;
     }
 
@@ -114,8 +114,8 @@
     }
 
     .menu__text {
-        // display: none;
-        font-size: 12px;
+        display: none;
+        // font-size: 12px;
     }
 
     .menu__item {
@@ -128,6 +128,10 @@
         font-weight: var(--font-weight-bold);
     }
 
+    .menu__item:hover {
+        background: transparent;
+    }
+
     .menu__item_active {
         color: var(--text-accent);
     }
@@ -135,6 +139,11 @@
     .menu__icon {
         width: 20px;
         height: 20px;
+        color: var(--icon-primary);
+    }
+
+    .menu__item_active .menu__icon {
+        color: var(--icon-accent);
     }
 }
 
