--- a/public/Components/SearchComponent/SearchComponent.scss
+++ b/public/Components/SearchComponent/SearchComponent.scss
@@ -5,3 +5,10 @@
 .search__title {
     margin-bottom: 4px;
 }
+
+.search__section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
