--- a/public/Components/SearchComponent/SearchComponent.scss
+++ b/public/Components/SearchComponent/SearchComponent.scss
@@ -3,7 +3,7 @@
 }
 
 .search__title {
-    margin-bottom: 4px;
+    margin-bottom: 12px;
 }
 
 .search__section {
@@ -11,4 +11,10 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
+}
+
+.search__list {
+    display: flex;
+    gap: 12px;
+    flex-direction: column;
 }
