--- a/public/imports.scss
+++ b/public/imports.scss
@@ -39,3 +39,4 @@
 @use './Views/StatsView/StatsView';
 @use './Views/FriendsView/FriendsView';
 @use './Views/CommunitiesView/CommunitiesView';
+@use './Views/CommunityEditView/CommunityEditView';
