--- a/public/Components/MainLayoutComponent/MainLayoutComponent.scss
+++ b/public/Components/MainLayoutComponent/MainLayoutComponent.scss
@@ -110,9 +110,10 @@
     .container_messenger {
         flex-direction: column;
         width: 100vw;
-        height: calc(100vh - 80px);
+        // height: calc(100vh - 80px);
         top: 0;
         position: absolute;
+        height: 100vh;
     }
 
     .container__row {
