--- a/public/Components/MessengerComponent/ChatsPanelComponent.scss
+++ b/public/Components/MessengerComponent/ChatsPanelComponent.scss
@@ -280,3 +280,10 @@
         font-size: 16px;
     }
 }
+
+@media screen and (max-width: 480px) {
+    .chats-panel {
+        height: calc(100% - 80px);
+        align-self: start;
+    }
+}
