--- a/public/Components/MessengerComponent/ChatWindowComponent.scss
+++ b/public/Components/MessengerComponent/ChatWindowComponent.scss
@@ -173,6 +173,11 @@
 }
 
 @media screen and (max-width: 480px) {
+    .chat-window {
+        position: absolute;
+        bottom: 0;
+    }
+
     .chat-window__title {
         font-size: var(--font-size-s);
     }
