--- a/public/imports.scss
+++ b/public/imports.scss
@@ -28,6 +28,7 @@
 @use './Components/FriendComponent/FriendComponent';
 @use './Components/EmptyStateComponent/EmptyStateComponent';
 @use './Components/SearchComponent/SearchComponent';
+@use './Components/NotificationComponent/NotificationComponent';
 
 @use './Views/FeedView/FeedView';
 @use './Views/ProfileView/ProfileView';
