--- a/public/Components/MenuComponent/MenuComponent.scss
+++ b/public/Components/MenuComponent/MenuComponent.scss
@@ -28,18 +28,17 @@
     display: flex;
     align-items: center;
     gap: 12px;
-    padding-left: 12px;
+    padding: 0 12px;
     width: 100%;
     height: 36px;
     flex-direction: row;
     border-radius: 8px;
-
     font-weight: var(--font-weight-regular);
     font-size: var(--font-size-l);
     line-height: 100%;
     color: var(--text-primary);
-
     transition: var(--trans-menu);
+    justify-content: space-between;
 }
 
 .menu__item:hover {
@@ -59,6 +58,27 @@
 .menu__item_active {
     font-weight: var(--font-weight-bold);
     color: var(--text-accent);
+}
+
+.menu__counter {
+    font-weight: var(--font-weight-bold);
+    line-height: var(--line-height-m);
+    color: var(--text-white);
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--icon-primary);
+    font-size: 12px;
+}
+
+.menu__item-left {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 12px;
 }
 
 @media screen and (max-width: 750px) {
